<resources>
    <string name="app_name">About Me</string>
    <string name="name">Segun Francis</string>
    <string name="yellow_star">Yellow Star string resource</string>
    <string name="bio">Hi, I\'m Segun \nEtiam vitae tortor. \nAenean vulputate eleifend tellus.  \nNullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. \nIn hac habitasse platea dictumst.  \nNunc interdum lacus sit amet orci. \nPraesent nec nisl a purus blandit viverra.  \nPellentesque posuere. \nQuisque rutrum.  \nPhasellus volutpat, metus eget egestas mollis, lacus blandit dui, id egestas quam mauris ut lacus. \nEtiam imperdiet orci. \nSed mollis, eros et ultrices tempus, mauris ipsum aliquam libero, non adipiscing dolor urna a orci. \nPhasellus accumsan cursus velit. \nCurabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo.\nPhasellus dolor. \nNulla porta dolor. \nMorbi mollis tellus ac sapien. \nNullam sagittis. Maecenas ullamcorper, dui et placerat feugiat, eros pede varius nisi, condimentum viverra felis nunc et lorem. \nSed hendrerit.</string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
</resources>
